@@ -1,6 +1,6 @@
 dnl AUTOCONF configuration for TRAMPOLINE
 dnl Bruno Haible 2001-01-27
-dnl Sam Steingold 2008-2009
+dnl Sam Steingold 2008-2010
 dnl
 AC_INIT(libffcall/trampoline,m4_normalize(m4_esyscmd([cat ../VERSION])))
 AC_CONFIG_SRCDIR(trampoline.h.in)
@@ -20,7 +20,7 @@ AC_CONFIG_AUX_DIR(../build-aux)
 AC_PROG_INSTALL
 CL_PROG_LN
 CL_PROG_LN_S
-FFCALL_CANONICAL_HOST_CPU
+gl_HOST_CPU_C_ABI
 AC_CHECK_HEADERS(unistd_h)
 FFCALL_COMMON_TRAMPOLINE
 CPU_OBJECTS=''
